# siplot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
adl2sidm/: Cargo.toml
adl2sidm/examples/: local_panel.adl  local_panel.rs  local_panel_screen.rs
adl2sidm/src/: cli.rs  codegen.rs  lib.rs  main.rs  symbols.rs
adl2sidm/tests/: compiles.rs  opens.rs
adl2sidm/tests/fixtures/: rd_screen.rs  sample.adl  sample_screen.rs
doc/: adl2sidm-parity-roadmap.md  design.md  high-level-api.md  parity-roadmap.md  plot3d-parity-roadmap.md  pydm-parity-roadmap.md
examples/: aspect_ratio.rs  bootstrap.rs  colormap_norm.rs  decimation.rs  error_bars.rs  fill.rs  gallery.rs  high_level_active_curve_labels.rs  high_level_baseline.rs  high_level_clear_action.rs  high_level_colormap.rs  high_level_colormap_dialog.rs  high_level_compare_images.rs  high_level_context_menu.rs  high_level_curve_legend.rs  high_level_curves_roi.rs  high_level_error_bars.rs  high_level_fft_action.rs  high_level_fit_widget.rs  high_level_image_view.rs  high_level_items_selector.rs  high_level_legend.rs  high_level_limits_widget.rs  high_level_live_image.rs  high_level_live_profile.rs  high_level_live_update.rs  high_level_log_axis.rs  high_level_mask_tools.rs  high_level_plot1d.rs  high_level_plot2d.rs  high_level_plot2d_colorbar.rs  high_level_plot_limits.rs  high_level_plot_widget.rs  high_level_roi_manager.rs  high_level_roi_profile.rs  high_level_roi_stats.rs  high_level_scatter_mask.rs  high_level_scatter_view.rs  high_level_shift_action.rs  high_level_stack_view.rs  (+24 more)
sidm/: Cargo.toml
sidm/examples/: pydm_ca_panel.rs  pydm_local_panel.rs  sidm_ca_panel.rs  sidm_local_panel.rs  sidm_mini_beamline.rs
sidm/src/: engine.rs  lib.rs
sidm/src/data_plugins/: fake_plugin.rs  mod.rs
sidm/src/data_plugins/epics_plugins/: ca_plugin.rs  mod.rs  pva_plugin.rs
sidm/src/widgets/: base.rs  byte.rs  checkbox.rs  datetime_edit.rs  datetime_label.rs  display_format.rs  drawing.rs  enum_button.rs  enum_choice.rs  enum_combo_box.rs  event_plot.rs  frame.rs  image_file.rs  image_view.rs  label.rs  line_edit.rs  mod.rs  multi_state.rs  plot_menu.rs  plot_style.rs  push_button.rs  scale_indicator.rs  scatter_plot.rs  slider.rs  spinbox.rs  symbol.rs  time_plot.rs  waveform_plot.rs  waveform_table.rs
sidm/tests/: ca_ioc.rs  composite_z_order_render.rs  engine_fake.rs  widget_array_plots_render.rs  widget_byte_render.rs  widget_drawing_render.rs  widget_event_plot_render.rs  widget_image_view_render.rs  widget_justified_fill.rs  widget_multi_state_render.rs  widget_plot_menu.rs  widget_plot_style_render.rs  widget_scale_indicator_render.rs  widget_symbol_render.rs  widget_time_plot_render.rs  widget_waveform_table_render.rs
src/: lib.rs
src/core/: backend.rs  colormap.rs  complex.rs  dtime_ticks.rs  fitting.rs  histogram.rs  items.rs  marker.rs  mod.rs  plot.rs  roi.rs  scatter_viz.rs  shape.rs  stats.rs  transform.rs  triangles.rs
src/core/scene3d/: marching_cubes.rs  mat4.rs  mod.rs  plane.rs
src/render/: backend_wgpu.rs  gpu_curve.rs  gpu_image.rs  gpu_scene3d.rs  mod.rs  save.rs  scene3d_items.rs  shaders.rs
src/render/shaders/: clear.wgsl  curve.wgsl  image.wgsl  linecaps.wgsl  markers.wgsl  scene3d_mesh.wgsl  scene3d_points.wgsl
src/widget/: alpha_slider.rs  chrome.rs  colorbar.rs  colormap_dialog.rs  complex_image_view.rs  fit_widget.rs  high_level.rs  histogram_colorbar.rs  image_stack.rs  interaction.rs  items_selection_dialog.rs  limits_widget.rs  mask_tools.rs  mod.rs  plot_widget.rs  position_info.rs  print_preview.rs  profile_window.rs  radar_view.rs  roi_manager.rs  roi_stats_widget.rs  scalar_field_view.rs  scatter_mask.rs  scene_position_info.rs  scene_widget.rs  scene_window.rs  stats_widget.rs  tool_buttons.rs
src/widget/actions/: analysis.rs  control.rs  io.rs  mod.rs  mode.rs
tests/: alpha_slider_binding.rs  compare_auto.rs  compare_separator.rs  complex_amplitude_controls.rs  curve_caps_joins.rs  image_alpha_map.rs  image_stack_lazy.rs  marker_symbols_render.rs  mask_pointer_offset.rs  multi_axis_render.rs  roi_band_unbounded_render.rs  ruler.rs  scalar_field_view_render.rs  scatter_profile.rs  scene3d_image_render.rs  scene3d_isosurface_render.rs  scene3d_mesh_render.rs  scene3d_points_render.rs  scene3d_textured_mesh_render.rs  scene_pick.rs  scene_viewpoint_render.rs  scene_widget_render.rs  scene_window_render.rs
