[package]
name = "egui-silx"
version = "0.0.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "silx-style scientific plotting for egui, rendered with wgpu"
publish = false

# The library itself does not depend on eframe (windowing). It works purely as
# an egui widget + egui-wgpu paint callback. wgpu types are reached through the
# egui-wgpu re-export to avoid version skew (a duplicate wgpu).
[dependencies]
egui = "0.34"
egui-wgpu = "0.34"
bytemuck = { version = "1", features = ["derive"] }
colorous = "1"

# Only the example (an eframe app) needs a window + RenderState.
[dev-dependencies]
eframe = "0.34"

[[example]]
name = "bootstrap"
path = "examples/bootstrap.rs"

[[example]]
name = "image"
path = "examples/image.rs"

[[example]]
name = "image_and_curve"
path = "examples/image_and_curve.rs"
