[package]
name = "egui-silx"
version = "0.0.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "silx-style scientific plotting for egui, rendered with wgpu"
publish = false

# The library itself does not depend on eframe (windowing). It works purely as
# an egui widget + egui-wgpu paint callback. wgpu types are reached through the
# egui-wgpu re-export to avoid version skew (a duplicate wgpu).
[dependencies]
egui = "0.34"
egui-wgpu = "0.34"
bytemuck = { version = "1", features = ["derive"] }
colorous = "1"
# PNG encoding for save_graph (offscreen readback → file). Already in the tree
# transitively via egui's image loading, so this pins no new major version.
png = "0.18"

# Only the example (an eframe app) needs a window + RenderState.
[dev-dependencies]
eframe = "0.34"

[[example]]
name = "bootstrap"
path = "examples/bootstrap.rs"

[[example]]
name = "image"
path = "examples/image.rs"

[[example]]
name = "image_and_curve"
path = "examples/image_and_curve.rs"

[[example]]
name = "high_level_plot_widget"
path = "examples/high_level_plot_widget.rs"

[[example]]
name = "high_level_plot1d"
path = "examples/high_level_plot1d.rs"

[[example]]
name = "high_level_plot2d"
path = "examples/high_level_plot2d.rs"

[[example]]
name = "high_level_clear_action"
path = "examples/high_level_clear_action.rs"

[[example]]
name = "high_level_live_update"
path = "examples/high_level_live_update.rs"

[[example]]
name = "high_level_roi_stats"
path = "examples/high_level_roi_stats.rs"

[[example]]
name = "high_level_items_selector"
path = "examples/high_level_items_selector.rs"

[[example]]
name = "high_level_context_menu"
path = "examples/high_level_context_menu.rs"

[[example]]
name = "high_level_shift_action"
path = "examples/high_level_shift_action.rs"

[[example]]
name = "high_level_live_image"
path = "examples/high_level_live_image.rs"

[[example]]
name = "high_level_legend"
path = "examples/high_level_legend.rs"

[[example]]
name = "live_update"
path = "examples/live_update.rs"

[[example]]
name = "log_axis"
path = "examples/log_axis.rs"

[[example]]
name = "aspect_ratio"
path = "examples/aspect_ratio.rs"

[[example]]
name = "y2_axis"
path = "examples/y2_axis.rs"

[[example]]
name = "thick_lines"
path = "examples/thick_lines.rs"

[[example]]
name = "markers"
path = "examples/markers.rs"

[[example]]
name = "picking"
path = "examples/picking.rs"

[[example]]
name = "roi"
path = "examples/roi.rs"

[[example]]
name = "decimation"
path = "examples/decimation.rs"

[[example]]
name = "large_image"
path = "examples/large_image.rs"

[[example]]
name = "save_graph"
path = "examples/save_graph.rs"

[[example]]
name = "labels"
path = "examples/labels.rs"

[[example]]
name = "per_vertex_color"
path = "examples/per_vertex_color.rs"

[[example]]
name = "line_styles"
path = "examples/line_styles.rs"

[[example]]
name = "fill"
path = "examples/fill.rs"

[[example]]
name = "error_bars"
path = "examples/error_bars.rs"

[[example]]
name = "colormap_norm"
path = "examples/colormap_norm.rs"

[[example]]
name = "rgba_image"
path = "examples/rgba_image.rs"

[[example]]
name = "plot_markers"
path = "examples/plot_markers.rs"

[[example]]
name = "shapes"
path = "examples/shapes.rs"

[[example]]
name = "triangles"
path = "examples/triangles.rs"

[[example]]
name = "high_level_roi_profile"
path = "examples/high_level_roi_profile.rs"

[[example]]
name = "high_level_fit_widget"
path = "examples/high_level_fit_widget.rs"

[[example]]
name = "high_level_mask_tools"
path = "examples/high_level_mask_tools.rs"

[[example]]
name = "high_level_colormap_dialog"
path = "examples/high_level_colormap_dialog.rs"

[[example]]
name = "high_level_limits_widget"
path = "examples/high_level_limits_widget.rs"
