[package]
name = "sidm"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "PyDM-style EPICS display widgets and data engine, built on siplot"
repository = "https://github.com/physwkim/siplot"

# `sidm` ports PyDM's core engine + widgets (Python/Qt EPICS display manager)
# onto siplot's egui/wgpu plotting. egui/egui-wgpu are reached through siplot's
# re-export (`siplot::egui`) to avoid a duplicate egui/wgpu, exactly as the
# examples do. The EPICS backends (epics-ca-rs / epics-pva-rs) and the calc
# evaluator are feature-gated and wired in later waves so the headless engine
# core compiles with no network/runtime dependencies.

[features]
# `ca` is on by default (Channel Access is the common EPICS transport, and the
# in-process `CaServer` round-trip test lives behind it). `pva`/`calc` join the
# default set as they are wired in later commits. `loc://`/`fake://` are always
# compiled, so `--no-default-features` gives the headless, dependency-light core.
default = ["ca"]
# Channel Access backend (`ca://`). Pulls epics-ca-rs (client + in-process
# CaServer for tests) and epics-base-rs (the `Snapshot`/`DbrClass`/`EpicsValue`
# types the client returns, which epics-ca-rs does not re-export).
ca = ["dep:epics-ca-rs", "dep:epics-base-rs"]

[dependencies]
siplot = { path = ".." }
# Async runtime for the data engine. The connection tasks live on a tokio
# runtime the `Engine` owns; widgets read shared state on the GUI thread. `net`
# is enabled so `enable_all()` (and the EPICS backends, later) work.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "net",
] }
# CancellationToken — fired when the last Channel for a connection drops, to
# stop that connection's task deterministically.
tokio-util = "0.7"

# EPICS Channel Access backend (feature `ca`). crates.io 0.18.x — an explicit
# deviation from siplot's no-new-dependency rule, scoped to this crate. The API
# is verified against the 0.18.6 source at ~/codes/epics-rs (same version).
epics-ca-rs = { version = "0.18", optional = true }
# `Snapshot`/`AlarmInfo`/`DisplayInfo`/`ControlInfo`/`EnumInfo`/`DbrClass`/
# `EpicsValue` returned by the CA client live here and are not re-exported by
# epics-ca-rs, so this is a direct dependency. Unified to the same 0.18.6 that
# epics-ca-rs pins, so there is one copy in the tree.
epics-base-rs = { version = "0.18", optional = true }
